@@ -167,19 +167,21 @@ TORRENT_TEST(clear_single_int)
 
 	sp.clear(settings_pack::max_out_request_queue);
 
-	TEST_EQUAL(sp.get_int(settings_pack::max_out_request_queue), 0);
+	// when cleared, we'll get the default value
+	TEST_EQUAL(sp.get_int(settings_pack::max_out_request_queue), 500);
 }
 
 TORRENT_TEST(clear_single_bool)
 {
 	settings_pack sp;
-	sp.set_bool(settings_pack::send_redundant_have, true);
+	sp.set_bool(settings_pack::send_redundant_have, false);
 
-	TEST_EQUAL(sp.get_bool(settings_pack::send_redundant_have), true);
+	TEST_EQUAL(sp.get_bool(settings_pack::send_redundant_have), false);
 
 	sp.clear(settings_pack::send_redundant_have);
 
-	TEST_EQUAL(sp.get_bool(settings_pack::send_redundant_have), false);
+	// when cleared, we'll get the default value
+	TEST_EQUAL(sp.get_bool(settings_pack::send_redundant_have), true);
 }
 
 TORRENT_TEST(clear_single_string)
@@ -191,7 +193,8 @@ TORRENT_TEST(clear_single_string)
 
 	sp.clear(settings_pack::user_agent);
 
-	TEST_EQUAL(sp.get_str(settings_pack::user_agent), std::string());
+	// when cleared, we'll get the default value
+	TEST_EQUAL(sp.get_str(settings_pack::user_agent), "libtorrent/2.0.7.0");
 }
 
 TORRENT_TEST(duplicates)
